; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/bfa/extr_bfa_core.c_bfa_iocfc_res_recfg.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/bfa/extr_bfa_core.c_bfa_iocfc_res_recfg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bfa_s = type { %struct.bfa_iocfc_s }
%struct.bfa_iocfc_s = type { %struct.bfi_iocfc_cfg_s* }
%struct.bfi_iocfc_cfg_s = type { i32 }
%struct.bfa_iocfc_fwcfg_s = type { i32, i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bfa_s*, %struct.bfa_iocfc_fwcfg_s*)* @bfa_iocfc_res_recfg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bfa_iocfc_res_recfg(%struct.bfa_s* %0, %struct.bfa_iocfc_fwcfg_s* %1) #0 {
  %3 = alloca %struct.bfa_s*, align 8
  %4 = alloca %struct.bfa_iocfc_fwcfg_s*, align 8
  %5 = alloca %struct.bfa_iocfc_s*, align 8
  %6 = alloca %struct.bfi_iocfc_cfg_s*, align 8
  store %struct.bfa_s* %0, %struct.bfa_s** %3, align 8
  store %struct.bfa_iocfc_fwcfg_s* %1, %struct.bfa_iocfc_fwcfg_s** %4, align 8
  %7 = load %struct.bfa_s*, %struct.bfa_s** %3, align 8
  %8 = getelementptr inbounds %struct.bfa_s, %struct.bfa_s* %7, i32 0, i32 0
  store %struct.bfa_iocfc_s* %8, %struct.bfa_iocfc_s** %5, align 8
  %9 = load %struct.bfa_iocfc_s*, %struct.bfa_iocfc_s** %5, align 8
  %10 = getelementptr inbounds %struct.bfa_iocfc_s, %struct.bfa_iocfc_s* %9, i32 0, i32 0
  %11 = load %struct.bfi_iocfc_cfg_s*, %struct.bfi_iocfc_cfg_s** %10, align 8
  store %struct.bfi_iocfc_cfg_s* %11, %struct.bfi_iocfc_cfg_s** %6, align 8
  %12 = load %struct.bfa_s*, %struct.bfa_s** %3, align 8
  %13 = load %struct.bfa_iocfc_fwcfg_s*, %struct.bfa_iocfc_fwcfg_s** %4, align 8
  %14 = getelementptr inbounds %struct.bfa_iocfc_fwcfg_s, %struct.bfa_iocfc_fwcfg_s* %13, i32 0, i32 4
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @bfa_fcxp_res_recfg(%struct.bfa_s* %12, i32 %15)
  %17 = load %struct.bfa_s*, %struct.bfa_s** %3, align 8
  %18 = load %struct.bfa_iocfc_fwcfg_s*, %struct.bfa_iocfc_fwcfg_s** %4, align 8
  %19 = getelementptr inbounds %struct.bfa_iocfc_fwcfg_s, %struct.bfa_iocfc_fwcfg_s* %18, i32 0, i32 3
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @bfa_uf_res_recfg(%struct.bfa_s* %17, i32 %20)
  %22 = load %struct.bfa_s*, %struct.bfa_s** %3, align 8
  %23 = load %struct.bfa_iocfc_fwcfg_s*, %struct.bfa_iocfc_fwcfg_s** %4, align 8
  %24 = getelementptr inbounds %struct.bfa_iocfc_fwcfg_s, %struct.bfa_iocfc_fwcfg_s* %23, i32 0, i32 2
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @bfa_rport_res_recfg(%struct.bfa_s* %22, i32 %25)
  %27 = load %struct.bfa_s*, %struct.bfa_s** %3, align 8
  %28 = load %struct.bfi_iocfc_cfg_s*, %struct.bfi_iocfc_cfg_s** %6, align 8
  %29 = getelementptr inbounds %struct.bfi_iocfc_cfg_s, %struct.bfi_iocfc_cfg_s* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = call i32 @cpu_to_be16(i32 %30)
  %32 = load %struct.bfa_iocfc_fwcfg_s*, %struct.bfa_iocfc_fwcfg_s** %4, align 8
  %33 = getelementptr inbounds %struct.bfa_iocfc_fwcfg_s, %struct.bfa_iocfc_fwcfg_s* %32, i32 0, i32 1
  %34 = load i32, i32* %33, align 4
  %35 = call i32 @bfa_fcp_res_recfg(%struct.bfa_s* %27, i32 %31, i32 %34)
  %36 = load %struct.bfa_s*, %struct.bfa_s** %3, align 8
  %37 = load %struct.bfa_iocfc_fwcfg_s*, %struct.bfa_iocfc_fwcfg_s** %4, align 8
  %38 = getelementptr inbounds %struct.bfa_iocfc_fwcfg_s, %struct.bfa_iocfc_fwcfg_s* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 4
  %40 = call i32 @bfa_tskim_res_recfg(%struct.bfa_s* %36, i32 %39)
  ret void
}

declare dso_local i32 @bfa_fcxp_res_recfg(%struct.bfa_s*, i32) #1

declare dso_local i32 @bfa_uf_res_recfg(%struct.bfa_s*, i32) #1

declare dso_local i32 @bfa_rport_res_recfg(%struct.bfa_s*, i32) #1

declare dso_local i32 @bfa_fcp_res_recfg(%struct.bfa_s*, i32, i32) #1

declare dso_local i32 @cpu_to_be16(i32) #1

declare dso_local i32 @bfa_tskim_res_recfg(%struct.bfa_s*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
